Testing Jenkins trigger